[package]
name = "min-gi"
version = "0.1.0"
authors = ["shiinamiyuki <xiaochun.tong@mail.utoronto.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.26.2"
nalgebra-glm = "0.12.0"
rayon = "1.5.0"
image = "0.23.14"
bytemuck = "1.5.1"
ordered-float = "2.1.1"
bitflags = "1.2.1"
rand = "0.8.3"
statrs = "0.14.0"